--- a/src/app/shared/directives/create-workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/shared/directives/create-workplace/type-of-employer/type-of-employer.component.html
@@ -39,8 +39,7 @@
                 id="conditional-employerType-conditional-1"
               >
                 <div class="govuk-form-group">
-                  <label class="govuk-label" for="other"> Other Employer Type </label>
-                  <span id="employerType-hint" class="govuk-hint"> Optional </span>
+                  <label class="govuk-label" for="other"> Other employer type (optional)</label>
                   <span *ngIf="submitted && form.get('other').invalid" id="other-error" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> {{ getErrorMessage('other') }}
                   </span>
