add type of employer to the rejected registrations in the admin section

--- a/src/app/features/admin/registration-requests/rejected-registration-request/rejected-registration-request.component.html
+++ b/src/app/features/admin/registration-requests/rejected-registration-request/rejected-registration-request.component.html
@@ -57,6 +57,16 @@
           {{ registration.establishment.mainService }}
         </dd>
       </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Employer type</dt>
+        <dd class="govuk-summary-list__value">
+          <span>{{
+            registration.establishment.employerType?.other
+              ? registration.establishment.employerType.other
+              : registration.establishment.employerType.value
+          }}</span>
+        </dd>
+      </div>
     </dl>
     <app-add-note
       [addNote]="addNote"
