--- a/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
+++ b/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
@@ -9,18 +9,17 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <fieldset class="govuk-fieldset">
-        <div class="govuk-form-group govuk-!-margin-bottom-0">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-fieldset__heading">
-              <span class="govuk-caption-l" data-testid="section-heading">Staff benefits</span>
-              Do you pay care workers a cash loyalty bonus within their first 2 years of employment?
-            </h1>
-          </legend>
-          <div class="govuk-!-margin-bottom-6">
-            <p>We only want to know about bonuses given for staying in a role, not for things like performance.</p>
-          </div>
-
-          <div class="govuk-radios govuk-radios--conditional govuk-!-margin-bottom-8">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">
+            <span class="govuk-caption-l" data-testid="section-heading">Staff benefits</span>
+            Do you pay care workers a cash loyalty bonus within their first 2 years of employment?
+          </h1>
+        </legend>
+        <div class="govuk-!-margin-bottom-6">
+          <p>We only want to know about bonuses given for staying in a role, not for things like performance.</p>
+        </div>
+        <div class="govuk-form-group">
+          <div class="govuk-radios govuk-radios--conditional govuk-!-margin-bottom-4">
             <ng-container *ngFor="let option of cashLoyaltyRequiredOptions; let i = index">
               <div class="govuk-radios__item">
                 <input
@@ -82,6 +81,10 @@
           </div>
         </div>
       </fieldset>
+      <app-workplace-submit-button
+        [return]="!!return"
+        (clicked)="setSubmitAction($event)"
+      ></app-workplace-submit-button>
     </div>
     <div class="govuk-grid-column-one-third">
       <div *ngIf="!return && !inStaffRecruitmentFlow" class="govuk-util__float-right">
@@ -109,6 +112,4 @@
       </div>
     </div>
   </div>
-
-  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
