--- a/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
+++ b/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
@@ -2,19 +2,19 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <fieldset class="govuk-fieldset">
-        <div class="govuk-form-group govuk-!-margin-bottom-0">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-fieldset__heading">
-              <span class="govuk-caption-l" data-testid="section-heading">Recruitment</span>
-              Do new care workers have to repeat training they've done with previous employers?
-            </h1>
-          </legend>
-          <div class="govuk-!-margin-bottom-6">
-            <p>Training could be things like 'moving and handling' and 'dementia care'.</p>
-          </div>
-          <div class="gouvk-grid-row govuk-!-margin-bottom-3">
-            <div class="govuk-radios">
-              <div class="govuk-radios__item" *ngFor="let option of trainingRequiredOptions; let i = index">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">
+            <span class="govuk-caption-l" data-testid="section-heading">Recruitment</span>
+            Do new care workers have to repeat training they've done with previous employers?
+          </h1>
+        </legend>
+        <div class="govuk-!-margin-bottom-6">
+          <p>Training could be things like 'moving and handling' and 'dementia care'.</p>
+        </div>
+        <div class="govuk-form-group">
+          <div class="govuk-radios govuk-!-margin-bottom-4">
+            <ng-container *ngFor="let option of trainingRequiredOptions; let i = index">
+              <div class="govuk-radios__item">
                 <input
                   class="govuk-radios__input"
                   id="trainingRequired-{{ i }}"
@@ -27,10 +27,14 @@
                   {{ option.label }}
                 </label>
               </div>
-            </div>
+            </ng-container>
           </div>
         </div>
       </fieldset>
+      <app-workplace-submit-button
+        [return]="!!return"
+        (clicked)="setSubmitAction($event)"
+      ></app-workplace-submit-button>
     </div>
     <div class="govuk-grid-column-one-third">
       <div *ngIf="!return && !inStaffRecruitmentFlow" class="govuk-util__float-right">
@@ -56,5 +60,4 @@
       </div>
     </div>
   </div>
-  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
