--- a/src/app/features/workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/features/workplace/type-of-employer/type-of-employer.component.html
@@ -3,11 +3,11 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
-            <h1 class="govuk-fieldset__heading">What type of employer is {{ establishment.name }}?</h1>
-          </legend>
+      <fieldset class="govuk-fieldset">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
+          <h1 class="govuk-fieldset__heading">What type of employer is {{ establishment.name }}?</h1>
+        </legend>
+        <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
           <span
             *ngIf="submitted && form.get('employerType').invalid"
             id="employerType-error"
@@ -55,10 +55,12 @@
               </div>
             </ng-container>
           </div>
-        </fieldset>
-      </div>
+        </div>
+      </fieldset>
+      <app-workplace-submit-button
+        [return]="!!return"
+        (clicked)="setSubmitAction($event)"
+      ></app-workplace-submit-button>
     </div>
   </div>
-
-  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
