fix(staffRecruitmentSnaggingList): Fixed typo on sick pay page heading

--- a/src/app/features/workplace/benefits-statutory-sick-pay/benefits-statutory-sick-pay.component.html
+++ b/src/app/features/workplace/benefits-statutory-sick-pay/benefits-statutory-sick-pay.component.html
@@ -5,8 +5,8 @@
         <div class="govuk-form-group govuk-!-margin-bottom-0">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              <span class="govuk-caption-l" data-testid="section-heading">Staff benefits</span>
-              Do you pay your care workers more than statutory 'sick pay' if they cannot work because of illness?
+              <span class="govuk-caption-l" data-testid="section-heading">Staff benefits</span>Do you pay your care
+              workers more than Statutory Sick Pay if they cannot work because of illness?
             </h1>
           </legend>
           <div class="gouvk-grid-row govuk-!-margin-bottom-3">
