fix(staffRecruitmentSnaggingList): Fixed typo on days leave page and changed error messages

--- a/src/app/features/workplace/staff-benefit-holiday-leave/staff-benefit-holiday-leave.component.html
+++ b/src/app/features/workplace/staff-benefit-holiday-leave/staff-benefit-holiday-leave.component.html
@@ -19,8 +19,8 @@
           <div class="govuk-!-margin-bottom-6">
             <label class="govuk-label" for="holidayLeave">Number of days</label>
             <p class="govuk-hint">
-              Include bank holidays in the total. For example, 20 days annual leave plus 8 days bank holidays would be
-              28 days in total.
+              Include bank holidays in the total. For example, 20 days annual leave plus 8 bank holidays would be 28
+              days in total.
             </p>
           </div>
           <span
