fix(staffRecruitmentSnaggingList): Fixed typo on sick pay bullet points in recruitment and benefits and workplace flow start pages

--- a/src/app/features/workplace/staff-recruitment/staff-recruitment-start.component.html
+++ b/src/app/features/workplace/staff-recruitment/staff-recruitment-start.component.html
@@ -34,7 +34,7 @@
       </li>
       <li>
         <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
-          whether care workers are paid more than statutory 'sick pay'?
+          whether care workers are paid more than Statutory Sick Pay?
         </p>
       </li>
       <li>
