--- a/src/app/features/workplace/start/start.component.html
+++ b/src/app/features/workplace/start/start.component.html
@@ -51,7 +51,7 @@
       </li>
       <li>
         <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
-          whether care workers are paid more than statutory 'sick pay'?
+          whether care workers are paid more than Statutory Sick Pay?
         </p>
       </li>
       <li>
