fix(staffRecruitmentSnaggingList): Fixed sickpay progress bar and updated staff recruitment summary page sick pay typo

--- a/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment-and-benefits.component.html
+++ b/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment-and-benefits.component.html
@@ -174,7 +174,7 @@
     </div>
 
     <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">Offer more than statutory 'sick pay'</dt>
+      <dt class="govuk-summary-list__key">Offer more than Statutory Sick Pay</dt>
       <dd class="govuk-summary-list__value">
         <ng-container *ngIf="!establishment.sickPay; else sickPayType"> - </ng-container>
         <ng-template #sickPayType>
