fix spacing on some buttons, shift over delete button on dashboard, widen columns on check-answers and workplace tab

--- a/src/app/features/dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/dashboard/dashboard-header/dashboard-header.component.html
@@ -10,7 +10,7 @@
 
     <div *ngIf="workplace && canDeleteEstablishment && subsidiaryCount < 1 && workplace.ustatus != 'PENDING'">
       <button
-        class="govuk-button govuk-button--link govuk__flex govuk__align-items-center"
+        class="govuk-button govuk-button--link govuk__flex govuk__align-items-center govuk-!-padding-left-0"
         (click)="onDeleteWorkplace($event)"
       >
         <img src="/assets/images/bin.svg" alt="" />
