--- a/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
+++ b/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
@@ -8,7 +8,7 @@
             Would you accept a Care Certificate from a worker's previous employer?
           </h1>
         </legend>
-        <div class="gouvk-form-group">
+        <div class="govuk-form-group">
           <div class="govuk-radios govuk-!-margin-bottom-4">
             <ng-container *ngFor="let option of previousCareCertificateOptions; let i = index">
               <div class="govuk-radios__item">
