--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -83,6 +83,7 @@
       <app-workplace-submit-button
         [return]="!!return"
         (clicked)="setSubmitAction($event)"
+        [reducedMargin]="true"
       ></app-workplace-submit-button>
     </div>
     <div class="govuk-grid-column-one-third">
