--- a/src/app/shared/components/workplace-submit-button/workplace-submit-button.component.html
+++ b/src/app/shared/components/workplace-submit-button/workplace-submit-button.component.html
@@ -1,4 +1,8 @@
-<div class="govuk-button-group govuk__align-items-unset">
+<div
+  class="govuk-button-group govuk__align-items-unset"
+  data-testid="button-container"
+  [ngClass]="{ 'govuk-!-margin-top-2': reducedMargin }"
+>
   <ng-container *ngIf="!return; else summary">
     <div>
       <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick('continue', true)">
