add property to inset text component to remove unwanted margin when showing an alert banner

--- a/src/app/features/workplace/staff-benefit-holiday-leave/staff-benefit-holiday-leave.component.html
+++ b/src/app/features/workplace/staff-benefit-holiday-leave/staff-benefit-holiday-leave.component.html
@@ -15,7 +15,7 @@
             How many days leave do your full-time care workers get each year?
           </h1>
         </legend>
-        <div class="govuk-!-margin-bottom-6">
+        <div>
           <label class="govuk-label" for="holidayLeave">Number of days</label>
           <p class="govuk-hint">
             Include bank holidays in the total. For example, 20 days annual leave plus 8 days bank holidays would be 28
