--- a/src/app/shared/components/alert/alert.component.html
+++ b/src/app/shared/components/alert/alert.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="alert$ | async as alert">
-  <app-inset-text [color]="alert.type" [closable]="true" (closed)="remove()">
+  <app-inset-text [color]="alert.type" [closable]="true" [removeBottomMargin]="true" (closed)="remove()">
     <span role="status">{{ alert.message }}</span>
   </app-inset-text>
 </ng-container>
