--- a/src/app/features/workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/features/workplace/type-of-employer/type-of-employer.component.html
@@ -3,7 +3,7 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-       <fieldset class="govuk-fieldset">
+      <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
           <span class="govuk-caption-l" data-testid="section-heading">{{ sectionHeading }}</span>
           <h1 class="govuk-fieldset__heading">What type of employer are you?</h1>
@@ -57,10 +57,12 @@
           </div>
         </div>
       </fieldset>
-      <app-workplace-submit-button
-        [return]="!!return"
-        (clicked)="setSubmitAction($event)"
-      ></app-workplace-submit-button>
     </div>
   </div>
+  <app-workplace-submit-button
+    [return]="!!return"
+    (clicked)="setSubmitAction($event)"
+    [recordSummary]="showSkipButton"
+    [callToAction]="callToAction"
+  ></app-workplace-submit-button>
 </form>
