--- a/src/app/features/dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/dashboard/dashboard-header/dashboard-header.component.html
@@ -1,8 +1,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
-      <span *ngIf="workplace?.isParent" class="govuk-caption-xl govuk-!-margin-bottom-3">Parent</span>
-      <span *ngIf="workplace?.parentUid" class="govuk-caption-xl govuk-!-margin-bottom-3">{{
+      <span *ngIf="workplace?.isParent" class="govuk-caption-xl govuk-!-margin-bottom-2">Parent</span>
+      <span *ngIf="workplace?.parentUid" class="govuk-caption-xl govuk-!-margin-bottom-2">{{
         workplace?.parentName
       }}</span>
       {{ workplace?.name }}
@@ -27,9 +27,12 @@
     </p>
   </div>
 
-  <div class="govuk-grid-column-one-third contact-col" [class.contact-col--parent]="workplace?.isParent">
+  <div
+    class="govuk-grid-column-one-third govuk-!-margin-top-2 contact-col"
+    [class.contact-col--parent]="workplace?.isParent"
+  >
     <h2 class="govuk-heading-s govuk-!-margin-bottom-0">Contact Skills for Care</h2>
-    <p class="govuk-!-font-size-16 govuk-!-margin-top-4 govuk-!-margin-bottom-0">0113 241 0969</p>
+    <p class="govuk-!-font-size-16 govuk-!-margin-top-2 govuk-!-margin-bottom-0">0113 241 0969</p>
     <p class="govuk-!-font-size-16 govuk-!-margin-top-2">
       <a href="mailto:ascwds-support@skillsforcare.org.uk">ascwds-support@skillsforcare.org.uk</a>
     </p>
