--- a/src/app/features/create-account/workplace/regulated-by-cqc/regulated-by-cqc.component.html
+++ b/src/app/features/create-account/workplace/regulated-by-cqc/regulated-by-cqc.component.html
@@ -53,10 +53,20 @@
       <button class="govuk-button" type="submit">Continue</button>
     </form>
   </div>
-  <div class="govuk-grid-column-one-third-from-desktop">
-    <div *ngif="!return" class="govuk-util_float-right">
-      <app-progress-bar data-testid="progress-bar" [sections]="'workplaceFlowSections" [currentSection]="section">
-      </app-progress-bar>
+  <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-util__float-right">
+      <app-progress-bar
+        data-testid="progress-bar-1"
+        [header]="'Workplace'"
+        [sections]="workplaceSections"
+        [currentSection]="'CQC regulated'"
+      ></app-progress-bar>
+      <app-progress-bar
+        data-testid="progress-bar-2"
+        [header]="'User account'"
+        [sections]="userAccountSections"
+        [currentSection]="'CQC regulated'"
+      ></app-progress-bar>
     </div>
   </div>
 </div>
